KSENROLL-8293 - Fixed Sonar Critical issues.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@53321 0ac02d80-fb3f-11dc-a574-c57244a850eb